--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -339,3 +339,173 @@ input:checked[type="checkbox"]::before{
 
 }
 
+.photo-profile{
+  width: 100% !important;
+  height: auto;
+}
+
+.profile-infos{
+  margin: 5px 20px;
+}
+
+.info-user{
+  margin: 3% 15%;
+}
+
+
+/*profile*/
+
+  .profile-labels,button,.profile-info{
+  text-decoration:none;
+  list-style:none;
+  font-style:normal;
+  outline:none !important;
+  transition:0.5s;
+  resize:none;
+  }
+  
+  .list-profile{
+  position:relative;
+  left:-20px;
+  }
+  
+  .list-profile li{
+  padding:20px 0;
+  color:gray;
+  border-bottom:1px solid rgba(255,255,255,0.1);
+  }
+  
+  .label-pr{
+  color:#fff;
+  }
+  
+  .fa-camera{
+    color:#4e73df;
+    cursor:pointer;
+    }
+  
+  .container-pro {
+  width:90%;
+  margin:10vh;
+
+  }
+  
+  .container-pro table{
+  width:100%;
+  }
+  
+  .container-pro table td{
+  margin:30px;
+  border-radius:5px;
+  box-shadow:0px 6px 16px -6px rgba(1,1,1,0.5);
+  padding:30px;
+  background-color:rgba(1,1,1,0.95);
+  color:#fff;
+  vertical-align:top;
+  }
+  
+  .container-pro table td:nth-child(1){
+  text-align:Center;
+  }
+  
+  .container-pro table td:nth-child(2) .fa{
+  float:right;
+  }
+  
+  .container-pro table td:nth-child(2) input{
+  background:none;
+  outline:none;
+  border:0;
+  color:gray;
+  width:60%;
+  pointer-events:none;
+  }
+  
+  .container-pro table td:nth-child(1) section{
+  position:relative;
+  width:200px;
+  height:200px;
+  margin:5vh auto;
+  }
+  
+  .container-pro table td:nth-child(1) .fa{
+  position:absolute;
+  right:25px;
+  top:25px;
+  font-size:2em;
+  }
+  
+  .container-pro table td img{
+  width:200px;
+  height:200px;
+  border-radius:50%;
+  }
+  
+  .container-pro table td h5{
+  color:gray;
+  font-weight:normal;
+  }
+  
+  @media (max-width:820px){
+    .container-pro {
+    width:100%;
+    }
+    .container-pro table td{
+    display:block;
+    width:90%;
+    margin:0px;
+    }
+ 
+  }
+
+  
+  /* profile img uploader */
+
+  .modal-lg{
+    max-width: 1000px !important;
+  }
+
+  .preview-p{
+    overflow: hidden;
+    width: 160px;
+    height: 160px;
+    margin: 10px;
+    border: 1px solid red;
+  }
+
+  #sample_image{
+    display: block;
+    max-width: 100%;
+  }
+
+
+
+  /*params account */
+
+  .params{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  .label-prf, .btn-prof{
+    margin-top: 10px;
+  }
+ 
+ 
+  /*password visibility params */
+  
+  .field-icon {
+    float: right;
+    margin-left: -25px;
+    margin-top: -25px;
+    position: relative;
+    z-index: 2;
+  }
+
+
+  
+ 
+
+
+  
