--- a/style.css
+++ b/style.css
@@ -1917,4 +1917,208 @@ hr.invis3 {
 }
 
 
+/* language switcher */
 
+.nav-wrapper {
+  text-align: center;
+  margin: 10px 15px 0 15px;
+}
+.sl-nav {
+  display: inline;
+}
+.sl-nav ul {
+  margin:0;
+  padding:0;
+  list-style: none;
+  position: relative;
+  display: inline-block;
+}
+.sl-nav li {
+  cursor: pointer;
+}
+.sl-nav li ul {
+  display: none;
+}
+.sl-nav li:hover ul {
+  position: absolute;
+  top:29px;
+  right:-15px;
+  display: block;
+  background: #fff;
+  width: 80px;
+  padding-top: 0px;
+  z-index: 1;
+  border-radius:5px;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+}
+.sl-nav li:hover .triangle {
+  position: absolute;
+  top: 15px;
+  right: -10px;
+  z-index:10;
+  height: 14px;
+  overflow:hidden;
+  width: 30px;
+  background: transparent;
+}
+.sl-nav li:hover .triangle:after {
+  content: '';
+  display: block;
+  z-index: 20;
+  width: 15px;
+  transform: rotate(45deg) translateY(0px) translatex(10px);
+  height: 15px;
+  background: #fff;
+  border-radius:2px 0px 0px 0px;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+}
+.sl-nav li ul li {
+  position: relative;
+  text-align: left;
+  background: transparent;
+  padding: 15px 15px;
+  padding-bottom:0;
+  z-index: 2;
+  font-size: 15px;
+  color: #3c3c3c;
+}
+.sl-nav li ul li:last-of-type {
+  padding-bottom: 15px;
+}
+.sl-nav li ul li span {
+  padding-left: 5px;
+}
+.sl-nav li ul li span:hover, .sl-nav li ul li span.active {
+  color: #146c78;
+}
+.sl-flag {
+  display: inline-block;
+  box-shadow: 0px 0px 3px rgba(0,0,0,0.4);
+  width: 15px;
+  height: 15px;
+  background: #aaa;
+  border-radius: 50%;
+  position: relative;
+  top: 2px;
+  overflow: hidden;
+}
+.flag-fr {
+  background: url('media/france.png');
+  background-size: cover;
+  background-position: center center;
+}
+.flag-ma {
+  background: url('media/morocco.png');
+  background-size: cover;
+  background-position: center center;
+}
+
+
+
+
+/* plugin actes */
+
+
+.collapse-area {
+  background: #D7D8DC;
+}
+.panel {
+  margin-top: 0px !important;
+  border-radius: 0px !important;
+  border: none;
+  border-bottom-color: #D7D8DC;
+  box-shadow: 0 0px 0px 0 transparent !important;
+  -moz-box-shadow: 0 0px 0px 0 transparent !important;
+  -webkit-box-shadow: 0 0px 0px 0 transparent !important;
+  -o-box-shadow: 0 0px 0px 0 transparent !important;
+}
+.panel .panel-heading {
+  border-radius: 0px !important;
+  background: #f5f6f8;
+  padding: 0px !important;
+  border-bottom: 0px solid #DDDEE2;
+}
+.panel .panel-heading .panel-title a {
+  text-decoration: none;
+  font-weight: bold;
+  display: block;
+  padding: 23px 15px;
+  font-weight: 300;
+  color: #60626d;
+  background-color: #ffffff;
+  line-height: 29px;
+  position: relative;
+}
+.panel .panel-heading .panel-title a:hover,
+.panel .panel-heading .panel-title a:active {
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  color: #9a4a5a;
+}
+.panel .panel-heading .panel-title a span {
+  float: left;
+  margin-top: 15px;
+  margin-right: 30px;
+  transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+}
+.panel .panel-heading .panel-title a .bar,
+.panel .panel-heading .panel-title a .bar:after {
+  border-width: 1px;
+  border-style: solid;
+  width: 21px;
+  border-radius: 10px;
+  transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+}
+.panel .panel-heading .panel-title a .bar:after {
+  content: "";
+  height: 0;
+  position: absolute;
+  top: 38px;
+  left: 15px;
+}
+.panel .panel-heading .panel-title a.collapsed {
+  background-color: #f5f6f8 !important;
+  border-bottom: 1px solid #eeeef3;
+  position: relative;
+  transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+}
+.panel .panel-heading .panel-title a.collapsed .bar {
+  border-color: #75767F;
+}
+.panel .panel-heading .panel-title a.collapsed .bar:after {
+  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  border-color: #75767F;
+  transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+}
+.panel-collapse {
+  background-color: #ffffff;
+}
+.panel-collapse .panel-body {
+  background-color: #ffffff;
+  border: 0px solid !important;
+  line-height: 26px;
+  font-weight: 300;
+  margin-left: 50px;
+  padding-bottom: 20px;
+  padding-top: 0px;
+  color: #60626d;
+}
