--- a/style.css
+++ b/style.css
@@ -1033,7 +1033,7 @@ div.tab button.active {
 .small-title {
     background: #edeff2 none repeat scroll 0 0;
     font-size: 16px;
-    left: 5%;
+    /*left: 5%;*/
     line-height: 1;
     margin: 0;
     padding: 0.6rem 1.5rem;
@@ -2203,3 +2203,57 @@ html { box-sizing: border-box; height: 100%; font-size: 10px; } *, *::before, *:
   width: 1px;
   overflow: hidden;
 }
+
+
+/* social sharing buttons */
+
+
+.social-buttons {
+    display: flex;
+}
+.social-buttons a {
+    text-decoration: none !important;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    /*margin-right: 20px;*/
+    font-size: 20px;
+    overflow: hidden;
+    position: relative;
+}
+      
+.social-buttons a i {
+    position: relative;
+    z-index: 3;
+}
+      
+.social-buttons .fa-facebook, .fb {
+    background-color: #3b5998;
+}
+      
+.social-buttons .fa-youtube, .yt {
+    background-color: #cb2027;
+}
+      
+
+.social-buttons a{
+    transition: transform 0.2s linear 0s, border-radius 0.2s linear 0.2s;
+}
+.social-buttons a i {
+    transition: transform 0.2s linear 0s;
+}
+      
+.social-buttons a:hover {
+        transform: rotate(-90deg);
+        border-top-left-radius: 50%;
+        border-top-right-radius: 50%;
+        border-bottom-left-radius: 50%;
+}
+.social-buttons a:hover i {
+          transform: rotate(90deg);
+}
+
