--- a/style.css
+++ b/style.css
@@ -1878,11 +1878,12 @@ hr.invis3 {
     border-color: lightgray;
     padding: 15px;
 }
-
+/*
 .espace-title{
     padding:5px 0 5px 20px !important;
     border-left:5px solid #2196f3;
 }
+*/
 
 /*
 .espace_itm {
